--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">memoriesCloud</string>
+    <string name="app_name">Memories Cloud</string>
+    <string name="title_activity_share">Recordar con Memories Cloud</string>
 </resources>
